# avo_xtb

./: .gitignore  .gitmodules  LICENSE  README.md  about.py  config.json  config.py  conformers.py  convert.py  crest_docs.py  debug.py  default_config.json  deprotonate.py  docs.py  energy.py  freq.py  gfn2-xtb.py  grad.py  install.py  md.py  obabel.py  obabel_convert.py  ohess.py  open.py  opt.py  orbitals.py  plugin.json  protonate.py  py_xtb.py  pyproject.toml  requirements.txt  run.py  run_calc.py  support.py  test.py
avo_xtb/: __init__.py  about.py  config.py  conformers.py  crest_docs.py  deprotonate.py  docs_crest.py  docs_xtb.py  energy.py  freq.py  install.py  install_crest.py  install_xtb.py  ohess.py  open.py  opt.py  orbitals.py  protonate.py  run.py  run_xtb.py  smartopt.py  solvate.py  support.py  tautomerize.py  xtb_docs.py
avo_xtb/crest/: conformers.py  deprotonate.py
avo_xtb/easyxtb/: calc.py  convert.py  program.py
avo_xtb/options/: config-options.json  conformers-options.json  install-crest-options.json  install-xtb-options.json  solvate-options.json
avo_xtb/tests/files/: solvate.cjson
easyxtb/: .readthedocs.yaml  LICENSE  README.md  mkdocs.yml  pyproject.toml
easyxtb/docs/: calculate.md  calculation.md  geometry.md  guide.md  index.md  program.md
easyxtb/src/easyxtb/: __init__.py  calc.py  calculate.py  conf.py  configuration.py  convert.py  default_config.json  format.py  geometry.py  parse.py
easyxtb/tests/: __init__.py  test_calc.py  test_io.py
easyxtb/tests/files/: acetic_acid_raw.xyz  acetone_bare.cjson  acetone_raw.xyz  benzene_raw.xyz  benzoate_bare.cjson  benzoate_raw.xyz  me4n_chrg_spin.cjson  me4n_raw.xyz  tempo_raw.cjson  tempo_raw.xyz
easyxtb/tests/files/input/: acetic_acid.cjson  acetic_acid.xyz  acetone.cjson  acetone_bare.cjson  benzene.cjson  benzene.xyz  benzoate.xyz  benzoate_raw.cjson  bu4n.cjson  bu4n_chrg_spin.xyz  tempo.cjson  tempo_raw.xyz
easyxtb/tests/files/output/: acetic_acid_g98.out  acetic_acid_opt.xyz  acetone_g98.out  acetone_opt.xyz  benzene_g98.out  benzene_opt.xyz  benzoate_g98.out  benzoate_opt.xyz  bu4n_g98.out  bu4n_opt.xyz  tempo_g98.out  tempo_opt.xyz
py-xtb/: README.md  energy.py  geometry.py  md.py  obabel_convert.py  opt.py  orbitals.py  pyproject.toml  run.py
py-xtb/src/py_xtb/: __init__.py  calc.py  conf.py  config.py  conformers.py  convert.py  default_config.json  energy.py  freq.py  geometry.py  md.py  obabel_convert.py  ohess.py  opt.py  orbitals.py  parse.py  run.py
src/avogadro_xtb/: __init__.py  calcs.py  config.py  links.py  run.py  setup.py
tests/files/: acetone.cjson  acetone.json  acetone.xyz
