[project]
name = "easyxtb"
version = "0.10.0"
description = "A Python API for xtb (and CREST)."
readme = "README.md"
requires-python = ">=3.10"
dependencies = []
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 4 - Beta",
    "Topic :: Scientific/Engineering :: Chemistry",
]

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.5.49",
    "mkdocs>=1.6.1",
    "mkdocstrings[python]>=0.27.0",
]

[project.urls]
Homepage = "https://github.com/matterhorn103/easyxtb"
Issues = "https://github.com/matterhorn103/easyxtb/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.3",
    "ruff>=0.7.2",
]

[tool.ruff]
line-length = 100
indent-width = 4
target-version = "py310"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
